Finished questions 6, 11, 16, 21, and 26

--- a/Assignment1/assignment01-python-numpy-programming.ipynb
+++ b/Assignment1/assignment01-python-numpy-programming.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,10 +46,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,12 +121,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9 8 7 6 5 4 3 2 1 0]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.arange(10)\n",
-    "# Include your solution below"
+    "# Include your solution below\n",
+    "# Uses a negative step to reverse the order\n",
+    "a = a[::-1]\n",
+    "print(a)"
    ]
   },
   {
@@ -202,12 +215,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 1. 1. 1. 1. 1. 0.]\n",
+      " [0. 1. 1. 1. 1. 1. 0.]\n",
+      " [0. 1. 1. 1. 1. 1. 0.]\n",
+      " [0. 1. 1. 1. 1. 1. 0.]\n",
+      " [0. 1. 1. 1. 1. 1. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "Z = np.ones((5,5))\n",
-    "# Include your solution below"
+    "# Include your solution below\n",
+    "# Uses np.pad to add additional rows and columns\n",
+    "Z = np.pad(Z, (1,1))\n",
+    "print(Z)"
    ]
   },
   {
@@ -282,13 +312,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X-array:  [0.03257897 0.23893606 0.85867206 0.37486254 0.18049818 0.09359002\n",
+      " 0.84455466 0.55460672 0.89200748 0.52289275]\n",
+      "Y-array:  [0.49436396 0.07306858 0.25759516 0.34227566 0.57572303 0.36858587\n",
+      " 0.61139615 0.39258568 0.9086864  0.97182435]\n",
+      "R-array:  [0.49543628 0.24985888 0.8964781  0.50761654 0.60335446 0.38028231\n",
+      " 1.04263024 0.67949402 1.27333748 1.10356667]\n",
+      "T-array:  [1.5049907  0.29677674 0.2914499  0.73998923 1.26698644 1.32213499\n",
+      " 0.62660469 0.6159838  0.79466039 1.07717193]\n"
+     ]
+    }
+   ],
    "source": [
     "Z = np.random.random((10,2))\n",
     "X,Y = Z[:,0], Z[:,1]\n",
-    "# Include your solution below\n"
+    "# Include your solution below\n",
+    "# Uses np.sqrt and np.arctan to convert the arrays to polar coordinates\n",
+    "print(\"X-array: \", X)\n",
+    "print(\"Y-array: \", Y)\n",
+    "R = np.sqrt(X**2 + Y**2)\n",
+    "T = np.arctan(Y/X)\n",
+    "print(\"R-array: \", R)\n",
+    "print(\"T-array: \", T)"
    ]
   },
   {
@@ -368,14 +420,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3  4]\n",
+      " [ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]\n",
+      " [15 16 17 18 19]\n",
+      " [20 21 22 23 24]\n",
+      " [25 26 27 28 29]]\n",
+      "\n",
+      "[[ 5  6  7  8  9]\n",
+      " [ 0  1  2  3  4]\n",
+      " [10 11 12 13 14]\n",
+      " [15 16 17 18 19]\n",
+      " [20 21 22 23 24]\n",
+      " [25 26 27 28 29]]\n"
+     ]
+    }
+   ],
    "source": [
     "W = np.arange(30).reshape(6,5)\n",
     "print(W)\n",
     "print()\n",
-    "# Include your solution below\n"
+    "# Include your solution below\n",
+    "# Selects specific rows and swaps the order of them\n",
+    "W[[0,1]] = W[[1,0]]\n",
+    "print(W)"
    ]
   },
   {
@@ -480,14 +555,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9995 9996 9997 9998 9999]\n"
+     ]
+    }
+   ],
    "source": [
     "def nlargest(a,n = 5):\n",
     "    # Include your solution here\n",
-    "    \n",
-    "    return\n",
+    "    # Uses np.sort to sort the array, then returns the last 5 elements of the sorted array\n",
+    "    a = np.sort(a)\n",
+    "    a = a[-n:]\n",
+    "    return a\n",
     "\n",
     "Z = np.arange(10000)\n",
     "np.random.shuffle(Z)\n",
@@ -512,7 +597,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
