modified #20 after having discussion with brandon

--- a/Assignment1/assignment01-python-numpy-programming.ipynb
+++ b/Assignment1/assignment01-python-numpy-programming.ipynb
@@ -144,7 +144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -297,7 +297,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -451,7 +451,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -603,52 +603,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "65DNZsb22zcc",
-        "outputId": "0b508020-5852-4b24-b2d6-d68e7d9e0459"
+        "outputId": "874d8346-ee6e-40dd-b0f4-9f24e86d10c6"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[[2., 2., 2.],\n",
-              "        [2., 2., 2.],\n",
-              "        [2., 2., 2.],\n",
-              "        [2., 2., 2.],\n",
-              "        [2., 2., 2.]],\n",
-              "\n",
-              "       [[2., 2., 2.],\n",
-              "        [2., 2., 2.],\n",
-              "        [2., 2., 2.],\n",
-              "        [2., 2., 2.],\n",
-              "        [2., 2., 2.]],\n",
-              "\n",
-              "       [[2., 2., 2.],\n",
-              "        [2., 2., 2.],\n",
-              "        [2., 2., 2.],\n",
-              "        [2., 2., 2.],\n",
-              "        [2., 2., 2.]],\n",
-              "\n",
-              "       [[2., 2., 2.],\n",
-              "        [2., 2., 2.],\n",
-              "        [2., 2., 2.],\n",
-              "        [2., 2., 2.],\n",
-              "        [2., 2., 2.]],\n",
-              "\n",
-              "       [[2., 2., 2.],\n",
-              "        [2., 2., 2.],\n",
-              "        [2., 2., 2.],\n",
-              "        [2., 2., 2.],\n",
-              "        [2., 2., 2.]]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 32
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[2. 2. 2. 2. 2.]\n",
+            " [2. 2. 2. 2. 2.]\n",
+            " [2. 2. 2. 2. 2.]\n",
+            " [2. 2. 2. 2. 2.]\n",
+            " [2. 2. 2. 2. 2.]]\n",
+            "[[2. 2. 2. 2. 2.]\n",
+            " [2. 2. 2. 2. 2.]\n",
+            " [2. 2. 2. 2. 2.]\n",
+            " [2. 2. 2. 2. 2.]\n",
+            " [2. 2. 2. 2. 2.]]\n",
+            "[[2. 2. 2. 2. 2.]\n",
+            " [2. 2. 2. 2. 2.]\n",
+            " [2. 2. 2. 2. 2.]\n",
+            " [2. 2. 2. 2. 2.]\n",
+            " [2. 2. 2. 2. 2.]]\n"
+          ]
         }
       ],
       "source": [
@@ -656,9 +639,12 @@
         "B = 2*np.ones((5,5))\n",
         "# Include your solution below\n",
         "B_reshape = np.reshape(B,(5,5,1))\n",
-        "np.multiply(A[0],B_reshape)\n",
-        "np.multiply(A[1],B_reshape)\n",
-        "np.multiply(A[2],B_reshape)"
+        "np.multiply(A[:,:,0],B)\n",
+        "np.multiply(A[:,:,1],B)\n",
+        "np.multiply(A[:,:,2],B)\n",
+        "print(np.multiply(A[:,:,0],B))\n",
+        "print(np.multiply(A[:,:,1],B))\n",
+        "print(np.multiply(A[:,:,2],B))"
       ],
       "id": "65DNZsb22zcc"
     },
@@ -817,7 +803,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
