additional fixes to #20

--- a/Assignment1/assignment01-python-numpy-programming.ipynb
+++ b/Assignment1/assignment01-python-numpy-programming.ipynb
@@ -603,35 +603,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "65DNZsb22zcc",
-        "outputId": "874d8346-ee6e-40dd-b0f4-9f24e86d10c6"
+        "outputId": "a23a6f48-aa21-491a-d06a-0043e0c5a1b0"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[2. 2. 2. 2. 2.]\n",
-            " [2. 2. 2. 2. 2.]\n",
-            " [2. 2. 2. 2. 2.]\n",
-            " [2. 2. 2. 2. 2.]\n",
-            " [2. 2. 2. 2. 2.]]\n",
-            "[[2. 2. 2. 2. 2.]\n",
-            " [2. 2. 2. 2. 2.]\n",
-            " [2. 2. 2. 2. 2.]\n",
-            " [2. 2. 2. 2. 2.]\n",
-            " [2. 2. 2. 2. 2.]]\n",
-            "[[2. 2. 2. 2. 2.]\n",
-            " [2. 2. 2. 2. 2.]\n",
-            " [2. 2. 2. 2. 2.]\n",
-            " [2. 2. 2. 2. 2.]\n",
-            " [2. 2. 2. 2. 2.]]\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[2., 2., 2.],\n",
+              "        [2., 2., 2.],\n",
+              "        [2., 2., 2.],\n",
+              "        [2., 2., 2.],\n",
+              "        [2., 2., 2.]],\n",
+              "\n",
+              "       [[2., 2., 2.],\n",
+              "        [2., 2., 2.],\n",
+              "        [2., 2., 2.],\n",
+              "        [2., 2., 2.],\n",
+              "        [2., 2., 2.]],\n",
+              "\n",
+              "       [[2., 2., 2.],\n",
+              "        [2., 2., 2.],\n",
+              "        [2., 2., 2.],\n",
+              "        [2., 2., 2.],\n",
+              "        [2., 2., 2.]],\n",
+              "\n",
+              "       [[2., 2., 2.],\n",
+              "        [2., 2., 2.],\n",
+              "        [2., 2., 2.],\n",
+              "        [2., 2., 2.],\n",
+              "        [2., 2., 2.]],\n",
+              "\n",
+              "       [[2., 2., 2.],\n",
+              "        [2., 2., 2.],\n",
+              "        [2., 2., 2.],\n",
+              "        [2., 2., 2.],\n",
+              "        [2., 2., 2.]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
         }
       ],
       "source": [
@@ -639,12 +656,7 @@
         "B = 2*np.ones((5,5))\n",
         "# Include your solution below\n",
         "B_reshape = np.reshape(B,(5,5,1))\n",
-        "np.multiply(A[:,:,0],B)\n",
-        "np.multiply(A[:,:,1],B)\n",
-        "np.multiply(A[:,:,2],B)\n",
-        "print(np.multiply(A[:,:,0],B))\n",
-        "print(np.multiply(A[:,:,1],B))\n",
-        "print(np.multiply(A[:,:,2],B))"
+        "np.multiply(A,B_reshape)"
       ],
       "id": "65DNZsb22zcc"
     },
