--- a/Assignment1/assignment01-python-numpy-programming.ipynb
+++ b/Assignment1/assignment01-python-numpy-programming.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ab4f35a1",
    "metadata": {},
    "source": [
     "# Assignment #01\n",
@@ -30,7 +31,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
+   "id": "69363d17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,6 +41,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bd23b7f3",
    "metadata": {},
    "source": [
     "**1. Import the numpy package under the name np**"
@@ -46,7 +49,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
+   "id": "1947e186",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,6 +59,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "abf570c8",
    "metadata": {},
    "source": [
     "**2. Print the numpy version and the configuration** Zach"
@@ -63,12 +68,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0af9230a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "73bf93e8",
    "metadata": {},
    "source": [
     "**3. Create a 1D array of zeros of size 10 of type float32** Greg"
@@ -77,12 +84,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0fd3db6d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "d2158302",
    "metadata": {},
    "source": [
     "**4. Print the memory size of the array below** Michael"
@@ -90,16 +99,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "id": "45e42095",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
    "source": [
     "Z = np.zeros((32,12))\n",
-    "# Include your solution below"
+    "# Include your solution below\n",
+    "print(Z.itemsize)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "811c31ca",
    "metadata": {},
    "source": [
     "**5. Create a 1D array with values ranging from 10 to 58** Meet"
@@ -108,12 +128,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ab1884d1",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "f5d43d8e",
    "metadata": {},
    "source": [
     "**6. Reverse the order of the values in the vector (first element becomes last)** Brandon"
@@ -122,6 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "bd7dc393",
    "metadata": {},
    "outputs": [
     {
@@ -142,6 +165,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a56fd303",
    "metadata": {},
    "source": [
     "**7. Create a 3x3 matrix with values ranging from 0 to 8** Zach"
@@ -150,12 +174,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "99a50281",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "0f196c92",
    "metadata": {},
    "source": [
     "**8. Create a 3x3 identity matrix** Greg"
@@ -164,12 +190,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "01588798",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "f7c979ab",
    "metadata": {},
    "source": [
     "**9. Find and print the maximum values of each column in the array below** Michael"
@@ -177,23 +205,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
+   "id": "eae96290",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.9001899  0.99441024 0.79933654 0.88815694 0.91848502 0.94363017\n",
+      " 0.98713268 0.92621345 0.91360112 0.86970602 0.91505352]\n"
+     ]
+    }
+   ],
    "source": [
     "Z = np.random.random((10,11))\n",
-    "# Include your solution below"
+    "# Include your solution below\n",
+    "Z_columns = Z.shape[1]\n",
+    "print(Z[:, :].max(axis = 0))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "40cc0735",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "e284021a",
    "metadata": {},
    "source": [
     "**10. Create a $7 \\times 7$ array with 1s on the borders (first row and column, last row and columns) and 0s everywhere else** Meet"
@@ -202,12 +244,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b6f3f0f7",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "cc4a8045",
    "metadata": {},
    "source": [
     "**11. Pad the existing array below with zeros (i.e., add additional rows and columns with zeros). Use the NumPy pad function.** Brandon"
@@ -216,6 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "5c5fae37",
    "metadata": {},
    "outputs": [
     {
@@ -242,6 +287,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c875ed5e",
    "metadata": {},
    "source": [
     "**12. Extract the integer part of the random array of positive numbers below** Zach"
@@ -250,6 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "90519b48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,6 +306,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "00344fc0",
    "metadata": {},
    "source": [
     "**13. Create a 5x5 matrix with rows with equal values ranging from 0 to 4 (i.e., [0,1,2,3,4])** Greg\n",
@@ -269,12 +317,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "07d5d5df",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "c5573780",
    "metadata": {},
    "source": [
     "**14. Create a vector of size 10 with values ranging from 0 to 1 (0 and 1 not included)** Michael\n",
@@ -284,13 +334,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
+   "id": "f1a53790",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.09090909 0.18181818 0.27272727 0.36363636 0.45454545 0.54545455\n",
+      " 0.63636364 0.72727273 0.81818182 0.90909091]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Z = np.linspace(0,1,12)[1:-1]\n",
+    "print(Z)"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "6a563f52",
    "metadata": {},
    "source": [
     "**15. Create a random vector of size 10 and sort it** Meet"
@@ -299,12 +363,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "173b615e",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "32e712f8",
    "metadata": {},
    "source": [
     "**16. Consider the cartesian coordinates below (X and Y), convert them to polar coordinates (R and T)** Brandon"
@@ -313,6 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "065b326c",
    "metadata": {},
    "outputs": [
     {
@@ -345,6 +412,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "96238c8c",
    "metadata": {},
    "source": [
     "**17. Create random vector of size 10 and replace the maximum value by 0** Zach"
@@ -353,12 +421,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "08dea567",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "a0ee5391",
    "metadata": {},
    "source": [
     "**18. Find the nearest value from a given value (z) in an array (Z)** Greg"
@@ -367,6 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "35ef784a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,6 +448,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "613672ba",
    "metadata": {},
    "source": [
     "**19. Consider the vector [5, 4, 3, 2, 1], how to build a new vector with 3 consecutive zeros interleaved between each value?** Michael"
@@ -384,16 +456,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
+   "id": "096a1cd9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4. 0. 0. 0. 3. 0. 0. 0. 2. 0. 0. 0. 1. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
    "source": [
     "Z = np.arange(5)[::-1]\n",
-    "# Include your solution below\n"
+    "# Include your solution below\n",
+    "Z_0 = np.zeros(len(Z) + (len(Z)-1)*3)\n",
+    "Z_0[::3+1] = Z \n",
+    "print(Z_0)\n",
+    "#Fix inital array??"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "1ca0c737",
    "metadata": {},
    "source": [
     "**20. Consider an array of dimension (5,5,3), how to mulitply it element-wise by an array with dimensions (5,5) - i.e., (5,5,0)$\\times$(5,5), (5,5,1)$\\times$(5,5), (5,5,2)$\\times$(5,5)** Meet"
@@ -402,6 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b791a50b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,6 +500,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6d8d9e41",
    "metadata": {},
    "source": [
     "**21. Swap the first and second rows of the 2D array below** Brandon"
@@ -421,6 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "98c5d96f",
    "metadata": {},
    "outputs": [
     {
@@ -455,6 +544,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "caee3d98",
    "metadata": {},
    "source": [
     "**22. Write a function that receives as input a 2D Boolean NumPy array and outputs the coordinates of the minimal bounding-box\n",
@@ -469,6 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "eedca37e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,6 +576,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a5e07ad6",
    "metadata": {},
    "source": [
     "**23.Write a function to compute the average over a sliding window of length N over a 1D array?** Greg\n",
@@ -495,6 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0d405b5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,6 +602,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2233b82e",
    "metadata": {},
    "source": [
     "**24.  Given a sorted 1D array C that corresponds to a bincount, how to produce an array A such that np.bincount(A) == C?** Michael\n",
@@ -520,17 +614,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
+   "id": "b09a5a8a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 2 1 1 2 0 1]\n",
+      "[1 1 2 3 4 4 6]\n"
+     ]
+    }
+   ],
    "source": [
     "C = np.bincount([1,1,2,3,4,4,6])\n",
     "print(C)\n",
-    "# Include yoru solution here"
+    "# Include your solution here\n",
+    "A = np.repeat(np.arange(C.size), C)\n",
+    "print(A)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "9da6d0d4",
    "metadata": {},
    "source": [
     "**25. Find the most frequent value in the array below?** Meet"
@@ -539,6 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "78b204fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,6 +656,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cee0462a",
    "metadata": {},
    "source": [
     "**26. Write a function to return the n largest values of an array** Brandon"
@@ -556,6 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "6ffbda9a",
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +707,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
