--- a/Assignment1/assignment01-python-numpy-programming.ipynb
+++ b/Assignment1/assignment01-python-numpy-programming.ipynb
@@ -77,14 +77,48 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "0af9230a",
       "metadata": {
         "id": "0af9230a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The numpy version: 1.16.6\n",
+            "mkl_info:\n",
+            "    libraries = ['mkl_rt']\n",
+            "    library_dirs = ['C:/Users/Zach Frena/anaconda3/envs/ensf-ml\\\\Library\\\\lib']\n",
+            "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+            "    include_dirs = ['C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\include', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\lib', 'C:/Users/Zach Frena/anaconda3/envs/ensf-ml\\\\Library\\\\include']\n",
+            "blas_mkl_info:\n",
+            "    libraries = ['mkl_rt']\n",
+            "    library_dirs = ['C:/Users/Zach Frena/anaconda3/envs/ensf-ml\\\\Library\\\\lib']\n",
+            "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+            "    include_dirs = ['C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\include', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\lib', 'C:/Users/Zach Frena/anaconda3/envs/ensf-ml\\\\Library\\\\include']\n",
+            "blas_opt_info:\n",
+            "    libraries = ['mkl_rt']\n",
+            "    library_dirs = ['C:/Users/Zach Frena/anaconda3/envs/ensf-ml\\\\Library\\\\lib']\n",
+            "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+            "    include_dirs = ['C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\include', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\lib', 'C:/Users/Zach Frena/anaconda3/envs/ensf-ml\\\\Library\\\\include']\n",
+            "lapack_mkl_info:\n",
+            "    libraries = ['mkl_rt']\n",
+            "    library_dirs = ['C:/Users/Zach Frena/anaconda3/envs/ensf-ml\\\\Library\\\\lib']\n",
+            "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+            "    include_dirs = ['C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\include', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\lib', 'C:/Users/Zach Frena/anaconda3/envs/ensf-ml\\\\Library\\\\include']\n",
+            "lapack_opt_info:\n",
+            "    libraries = ['mkl_rt']\n",
+            "    library_dirs = ['C:/Users/Zach Frena/anaconda3/envs/ensf-ml\\\\Library\\\\lib']\n",
+            "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+            "    include_dirs = ['C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\include', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\lib', 'C:/Users/Zach Frena/anaconda3/envs/ensf-ml\\\\Library\\\\include']\n"
+          ]
+        }
+      ],
       "source": [
-        ""
+        "print(\"The numpy version: {}\".format(np.__version__))\n",
+        "np.show_config()"
       ]
     },
     {
@@ -105,9 +139,7 @@
         "id": "0fd3db6d"
       },
       "outputs": [],
-      "source": [
-        ""
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -121,7 +153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "45e42095",
       "metadata": {
         "id": "45e42095",
@@ -154,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 14,
       "id": "ab1884d1",
       "metadata": {
         "colab": {
@@ -165,7 +197,6 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "array([10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26,\n",
@@ -173,8 +204,9 @@
               "       44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58])"
             ]
           },
+          "execution_count": 14,
           "metadata": {},
-          "execution_count": 3
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -228,14 +260,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 49,
       "id": "99a50281",
       "metadata": {
         "id": "99a50281"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[0 1 2]\n",
+            " [3 4 5]\n",
+            " [6 7 8]]\n"
+          ]
+        }
+      ],
       "source": [
-        ""
+        "a = np.array([[0,1,2],[3,4,5],[6,7,8]])\n",
+        "print(a)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 51,
+      "id": "514faaf7",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[0 1 2]\n",
+            " [3 4 5]\n",
+            " [6 7 8]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "#Alernate solution using reshape for question 7 (useful for a large range of values):\n",
+        "a=np.arange(0,9).reshape(3,3)\n",
+        "print(a)"
       ]
     },
     {
@@ -256,9 +321,7 @@
         "id": "01588798"
       },
       "outputs": [],
-      "source": [
-        ""
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -272,7 +335,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "id": "eae96290",
       "metadata": {
         "id": "eae96290",
@@ -283,8 +346,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[0.9001899  0.99441024 0.79933654 0.88815694 0.91848502 0.94363017\n",
-            " 0.98713268 0.92621345 0.91360112 0.86970602 0.91505352]\n"
+            "[0.75417611 0.91492812 0.98190084 0.98484943 0.82380658 0.97715201\n",
+            " 0.99227628 0.94047737 0.95036286 0.93879026 0.87424205]\n"
           ]
         }
       ],
@@ -293,18 +356,6 @@
         "# Include your solution below\n",
         "Z_columns = Z.shape[1]\n",
         "print(Z[:, :].max(axis = 0))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "40cc0735",
-      "metadata": {
-        "id": "40cc0735"
-      },
-      "outputs": [],
-      "source": [
-        ""
       ]
     },
     {
@@ -330,8 +381,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[[1. 1. 1. 1. 1. 1. 1.]\n",
             " [1. 0. 0. 0. 0. 0. 1.]\n",
@@ -402,15 +453,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "id": "90519b48",
       "metadata": {
         "id": "90519b48"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[4.80590213 9.71266102 6.8274115  5.49550119 5.64569107 5.8856402\n",
+            " 3.22209381 4.16602435 0.69987659 3.96395716]\n",
+            "[4 9 6 5 5 5 3 4 0 3]\n"
+          ]
+        }
+      ],
       "source": [
         "Z = np.random.uniform(0,10,10)\n",
-        "# Include your solution below"
+        "# Include your solution below\n",
+        "print(Z) \n",
+        "Z=Z.astype(int)\n",
+        "print(Z)"
       ]
     },
     {
@@ -433,9 +497,7 @@
         "id": "07d5d5df"
       },
       "outputs": [],
-      "source": [
-        ""
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -495,8 +557,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[0 2 2 4 5 5 5 7 8 9]\n"
           ]
@@ -567,14 +629,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "id": "08dea567",
       "metadata": {
         "id": "08dea567"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[0.5259231  0.69506692 0.71549306 0.18853698 0.26903877 0.49410559\n",
+            " 0.50975813 0.87105451 0.80402116 0.69857054]\n",
+            "[0.5259231  0.69506692 0.71549306 0.18853698 0.26903877 0.49410559\n",
+            " 0.50975813 0.         0.80402116 0.69857054]\n"
+          ]
+        }
+      ],
       "source": [
-        ""
+        "a = np.random.rand(10) # creating vector of 10 random numbers\n",
+        "print(a)  \n",
+        "a = np.where(a == np.amax(a, axis = 0), 0, a) # replacing value with 0 if condition (i.e. is maximum value) is met \n",
+        "print(a)\n"
       ]
     },
     {
@@ -660,7 +736,6 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "array([[[2., 2., 2.],\n",
@@ -694,8 +769,9 @@
               "        [2., 2., 2.]]])"
             ]
           },
+          "execution_count": 7,
           "metadata": {},
-          "execution_count": 7
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -773,22 +849,61 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 70,
       "id": "eedca37e",
       "metadata": {
         "id": "eedca37e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[0 0 0 0 0 0]\n",
+            " [0 0 0 0 0 0]\n",
+            " [0 0 1 1 0 0]\n",
+            " [0 0 0 0 0 0]\n",
+            " [0 0 1 0 0 0]\n",
+            " [0 0 0 0 0 0]\n",
+            " [0 0 0 0 0 0]]\n",
+            "(array([2, 2, 4], dtype=int64), array([2, 3, 2], dtype=int64))\n",
+            "1\n",
+            "1\n",
+            "5\n",
+            "4\n",
+            "\n",
+            "(array([2, 2, 4], dtype=int64), array([2, 3, 2], dtype=int64))\n"
+          ]
+        }
+      ],
       "source": [
         "def bbox(img):\n",
         "    #include your solution below\n",
+        "\n",
+        "    # numpy's nonzero function returns an array of tuples that correspond with the indices of each non-zero value in each dimension.\n",
+        "    # The values of the input array are returned in a row-major, C-style order.\n",
+        "    r1=np.nonzero(img)[0][0]-1 # finds the first row that a non-zero value exists in, and subtracts 1 to get the enveloping row \n",
+        "    c1=np.nonzero(img)[1][0]-1 \n",
+        "    r2=np.nonzero(img)[0][-1]+1 \n",
+        "    c2=np.max(np.nonzero(img)[1])+1 # Due to row-major order, we need to find the max value for the column tuple and then add 1 to get enveloping column \n",
         "    return (r1,c1),(r2,c2)\n",
         "\n",
         "\n",
         "from PIL import Image\n",
         "\n",
         "img = np.array(Image.open('../Figures/bin_image.png').convert('L')) > 0\n",
-        "print(bbox(img))"
+        "\n",
+        "# --- the code below was used to test ---\n",
+        "# example_img=np.array([[0,0,0,0,0,0],[0,0,0,0,0,0],[0,0,1,1,0,0],[0,0,0,0,0,0],[0,0,1,0,0,0],[0,0,0,0,0,0],[0,0,0,0,0,0]])\n",
+        "# print(example_img)\n",
+        "# print(np.nonzero(example_img))\n",
+        "# print(np.nonzero(example_img)[0][0]-1) #r1\n",
+        "# print(np.nonzero(example_img)[1][0]-1) #c1\n",
+        "# print(np.nonzero(example_img)[0][-1]+1) #r2\n",
+        "# print(np.max(np.nonzero(example_img)[1])+1) #c2\n",
+        "# ---------------------------------\n",
+        "\n",
+        "# print(bbox(img))"
       ]
     },
     {
@@ -884,8 +999,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "The random array has following values\n",
             "[0 3 1 1 3 8 7 8 1 0 2 9 6 7 0 6 9 7 6 6 9 0 7 6 3 9 4 6 3 3 1 7 3 1 0 2 0\n",
@@ -948,6 +1063,10 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "name": "assignment01-python-numpy-programming.ipynb",
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -964,10 +1083,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.8.8"
-    },
-    "colab": {
-      "name": "assignment01-python-numpy-programming.ipynb",
-      "provenance": []
     }
   },
   "nbformat": 4,
