--- a/Assignment1/assignment01-python-numpy-programming.ipynb
+++ b/Assignment1/assignment01-python-numpy-programming.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "id": "0af9230a"
    },
@@ -81,32 +81,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The numpy version: 1.16.6\n",
-      "mkl_info:\n",
-      "    libraries = ['mkl_rt']\n",
-      "    library_dirs = ['C:/Users/Zach Frena/anaconda3/envs/ensf-ml\\\\Library\\\\lib']\n",
-      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
-      "    include_dirs = ['C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\include', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\lib', 'C:/Users/Zach Frena/anaconda3/envs/ensf-ml\\\\Library\\\\include']\n",
+      "The numpy version: 1.18.5\n",
       "blas_mkl_info:\n",
       "    libraries = ['mkl_rt']\n",
-      "    library_dirs = ['C:/Users/Zach Frena/anaconda3/envs/ensf-ml\\\\Library\\\\lib']\n",
+      "    library_dirs = ['C:/Users/Greg/anaconda3\\\\Library\\\\lib']\n",
       "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
-      "    include_dirs = ['C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\include', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\lib', 'C:/Users/Zach Frena/anaconda3/envs/ensf-ml\\\\Library\\\\include']\n",
+      "    include_dirs = ['C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\include', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\lib', 'C:/Users/Greg/anaconda3\\\\Library\\\\include']\n",
       "blas_opt_info:\n",
       "    libraries = ['mkl_rt']\n",
-      "    library_dirs = ['C:/Users/Zach Frena/anaconda3/envs/ensf-ml\\\\Library\\\\lib']\n",
+      "    library_dirs = ['C:/Users/Greg/anaconda3\\\\Library\\\\lib']\n",
       "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
-      "    include_dirs = ['C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\include', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\lib', 'C:/Users/Zach Frena/anaconda3/envs/ensf-ml\\\\Library\\\\include']\n",
+      "    include_dirs = ['C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\include', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\lib', 'C:/Users/Greg/anaconda3\\\\Library\\\\include']\n",
       "lapack_mkl_info:\n",
       "    libraries = ['mkl_rt']\n",
-      "    library_dirs = ['C:/Users/Zach Frena/anaconda3/envs/ensf-ml\\\\Library\\\\lib']\n",
+      "    library_dirs = ['C:/Users/Greg/anaconda3\\\\Library\\\\lib']\n",
       "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
-      "    include_dirs = ['C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\include', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\lib', 'C:/Users/Zach Frena/anaconda3/envs/ensf-ml\\\\Library\\\\include']\n",
+      "    include_dirs = ['C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\include', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\lib', 'C:/Users/Greg/anaconda3\\\\Library\\\\include']\n",
       "lapack_opt_info:\n",
       "    libraries = ['mkl_rt']\n",
-      "    library_dirs = ['C:/Users/Zach Frena/anaconda3/envs/ensf-ml\\\\Library\\\\lib']\n",
+      "    library_dirs = ['C:/Users/Greg/anaconda3\\\\Library\\\\lib']\n",
       "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
-      "    include_dirs = ['C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\include', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\lib', 'C:/Users/Zach Frena/anaconda3/envs/ensf-ml\\\\Library\\\\include']\n"
+      "    include_dirs = ['C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\include', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\lib', 'C:/Users/Greg/anaconda3\\\\Library\\\\include']\n"
      ]
     }
    ],
@@ -126,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "id": "0fd3db6d"
    },
@@ -155,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "id": "45e42095",
     "outputId": "dfeda762-7d5b-4fd5-8319-3ac70e569885"
@@ -186,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -203,7 +198,7 @@
        "       44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "bd7dc393",
     "outputId": "7c93959e-28d9-4762-be47-bfa5ac5f7a6e"
@@ -256,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {
     "id": "99a50281"
    },
@@ -278,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "id": "01588798"
    },
@@ -339,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {
     "id": "eae96290",
     "outputId": "ce3fbc76-b653-470e-90c8-369e348c8345"
@@ -349,8 +344,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.75417611 0.91492812 0.98190084 0.98484943 0.82380658 0.97715201\n",
-      " 0.99227628 0.94047737 0.95036286 0.93879026 0.87424205]\n"
+      "[0.98398606 0.99301512 0.85111841 0.93289151 0.9653976  0.95840922\n",
+      " 0.91223962 0.67211956 0.9954685  0.91245885 0.94282024]\n"
      ]
     }
    ],
@@ -372,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -412,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "id": "5c5fae37",
     "outputId": "48d80a85-9b10-4eaf-c4f8-ace6c19eaf94"
@@ -451,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {
     "id": "90519b48"
    },
@@ -460,9 +455,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4.80590213 9.71266102 6.8274115  5.49550119 5.64569107 5.8856402\n",
-      " 3.22209381 4.16602435 0.69987659 3.96395716]\n",
-      "[4 9 6 5 5 5 3 4 0 3]\n"
+      "[2.59577833 2.88164045 1.91222686 3.38312873 8.89226072 1.94833015\n",
+      " 0.16678462 0.56894806 4.57887722 2.09238182]\n",
+      "[2 2 1 3 8 1 0 0 4 2]\n"
      ]
     }
    ],
@@ -487,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {
     "id": "07d5d5df"
    },
@@ -523,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "id": "f1a53790",
     "outputId": "c24ba371-98b9-40fd-fe26-d7246404fd60"
@@ -554,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -567,7 +562,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 2 2 4 5 5 5 7 8 9]\n"
+      "[3 3 5 5 5 6 6 6 7 8]\n"
      ]
     }
    ],
@@ -588,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "id": "065b326c",
     "outputId": "e4be69b0-e95c-4038-a568-8da0eb9c1c48"
@@ -598,14 +593,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X-array:  [0.03257897 0.23893606 0.85867206 0.37486254 0.18049818 0.09359002\n",
-      " 0.84455466 0.55460672 0.89200748 0.52289275]\n",
-      "Y-array:  [0.49436396 0.07306858 0.25759516 0.34227566 0.57572303 0.36858587\n",
-      " 0.61139615 0.39258568 0.9086864  0.97182435]\n",
-      "R-array:  [0.49543628 0.24985888 0.8964781  0.50761654 0.60335446 0.38028231\n",
-      " 1.04263024 0.67949402 1.27333748 1.10356667]\n",
-      "T-array:  [1.5049907  0.29677674 0.2914499  0.73998923 1.26698644 1.32213499\n",
-      " 0.62660469 0.6159838  0.79466039 1.07717193]\n"
+      "X-array:  [0.4797416  0.67688976 0.10974996 0.8868519  0.51629646 0.16382086\n",
+      " 0.71103991 0.8379579  0.31528081 0.89842831]\n",
+      "Y-array:  [0.50318286 0.2884102  0.76776736 0.79316591 0.208349   0.76291623\n",
+      " 0.90110669 0.57576201 0.78166167 0.86169258]\n",
+      "R-array:  [0.69523018 0.73577183 0.7755719  1.18979766 0.5567507  0.78030663\n",
+      " 1.14785496 1.01669825 0.84285049 1.24486446]\n",
+      "T-array:  [0.80924213 0.40278632 1.42881132 0.72969098 0.38355892 1.35927842\n",
+      " 0.90275315 0.6020166  1.18740803 0.76453005]\n"
      ]
     }
    ],
@@ -633,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {
     "id": "08dea567"
    },
@@ -642,10 +637,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.5259231  0.69506692 0.71549306 0.18853698 0.26903877 0.49410559\n",
-      " 0.50975813 0.87105451 0.80402116 0.69857054]\n",
-      "[0.5259231  0.69506692 0.71549306 0.18853698 0.26903877 0.49410559\n",
-      " 0.50975813 0.         0.80402116 0.69857054]\n"
+      "[0.20123748 0.46527686 0.9328068  0.54605111 0.57636171 0.80708333\n",
+      " 0.67434063 0.37822369 0.33548858 0.3420608 ]\n",
+      "[0.20123748 0.46527686 0.         0.54605111 0.57636171 0.80708333\n",
+      " 0.67434063 0.37822369 0.33548858 0.3420608 ]\n"
      ]
     }
    ],
@@ -667,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 20,
    "metadata": {
     "id": "35ef784a"
    },
@@ -676,9 +671,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Array Z: [0.8159598  0.34329844 0.77621846 0.64221993 0.06901687 0.49705185\n",
-      " 0.64393966 0.53453491 0.03115682 0.51980083]\n",
-      "Nearest value to z=0.5 is 0.4970518533308338 at index 5 of Z.\n"
+      "Array Z: [0.55860886 0.68506019 0.57435819 0.82749869 0.16998816 0.66150498\n",
+      " 0.34256078 0.04912908 0.53576409 0.88973158]\n",
+      "Nearest value to z=0.5 is 0.5357640867512935 at index 8 of Z.\n"
      ]
     }
    ],
@@ -706,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "id": "096a1cd9",
     "outputId": "556cedca-dd8d-4c69-eec5-c551566608c7"
@@ -740,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -783,7 +778,7 @@
        "        [2., 2., 2.]]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "id": "98c5d96f",
     "outputId": "a0e6aac1-d9ce-47a6-ec12-ba46a2103f7e"
@@ -860,32 +855,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 25,
    "metadata": {
     "id": "eedca37e"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 0 1 1 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 0 1 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]]\n",
-      "(array([2, 2, 4], dtype=int64), array([2, 3, 2], dtype=int64))\n",
-      "1\n",
-      "1\n",
-      "5\n",
-      "4\n",
-      "\n",
-      "(array([2, 2, 4], dtype=int64), array([2, 3, 2], dtype=int64))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def bbox(img):\n",
     "    #include your solution below\n",
