Checking everything still runs fine

--- a/Assignment1/assignment01-python-numpy-programming.ipynb
+++ b/Assignment1/assignment01-python-numpy-programming.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {
     "id": "69363d17"
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {
     "id": "1947e186"
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {
     "id": "0af9230a"
    },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {
     "id": "0fd3db6d"
    },
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {
     "id": "45e42095",
     "outputId": "dfeda762-7d5b-4fd5-8319-3ac70e569885"
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -198,7 +198,7 @@
        "       44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {
     "id": "bd7dc393",
     "outputId": "7c93959e-28d9-4762-be47-bfa5ac5f7a6e"
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {
     "id": "99a50281"
    },
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {
     "id": "01588798"
    },
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {
     "id": "eae96290",
     "outputId": "ce3fbc76-b653-470e-90c8-369e348c8345"
@@ -344,8 +344,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.98398606 0.99301512 0.85111841 0.93289151 0.9653976  0.95840922\n",
-      " 0.91223962 0.67211956 0.9954685  0.91245885 0.94282024]\n"
+      "[0.95327095 0.84776247 0.91251863 0.97043272 0.98977559 0.83877773\n",
+      " 0.92442476 0.9014428  0.94375432 0.95800386 0.95773372]\n"
      ]
     }
    ],
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {
     "id": "5c5fae37",
     "outputId": "48d80a85-9b10-4eaf-c4f8-ace6c19eaf94"
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {
     "id": "90519b48"
    },
@@ -455,9 +455,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2.59577833 2.88164045 1.91222686 3.38312873 8.89226072 1.94833015\n",
-      " 0.16678462 0.56894806 4.57887722 2.09238182]\n",
-      "[2 2 1 3 8 1 0 0 4 2]\n"
+      "[8.0287117  1.79471898 1.09478221 7.23979387 7.99532448 9.28746484\n",
+      " 0.52302213 0.75585447 5.01581146 5.62265985]\n",
+      "[8 1 1 7 7 9 0 0 5 5]\n"
      ]
     }
    ],
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {
     "id": "07d5d5df"
    },
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {
     "id": "f1a53790",
     "outputId": "c24ba371-98b9-40fd-fe26-d7246404fd60"
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -562,7 +562,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3 3 5 5 5 6 6 6 7 8]\n"
+      "[0 2 3 3 6 6 7 7 7 8]\n"
      ]
     }
    ],
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "metadata": {
     "id": "065b326c",
     "outputId": "e4be69b0-e95c-4038-a568-8da0eb9c1c48"
@@ -593,14 +593,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X-array:  [0.4797416  0.67688976 0.10974996 0.8868519  0.51629646 0.16382086\n",
-      " 0.71103991 0.8379579  0.31528081 0.89842831]\n",
-      "Y-array:  [0.50318286 0.2884102  0.76776736 0.79316591 0.208349   0.76291623\n",
-      " 0.90110669 0.57576201 0.78166167 0.86169258]\n",
-      "R-array:  [0.69523018 0.73577183 0.7755719  1.18979766 0.5567507  0.78030663\n",
-      " 1.14785496 1.01669825 0.84285049 1.24486446]\n",
-      "T-array:  [0.80924213 0.40278632 1.42881132 0.72969098 0.38355892 1.35927842\n",
-      " 0.90275315 0.6020166  1.18740803 0.76453005]\n"
+      "X-array:  [0.95224445 0.09452155 0.71238747 0.87722571 0.80766448 0.89482972\n",
+      " 0.62546641 0.24189652 0.54977555 0.80242772]\n",
+      "Y-array:  [0.14232307 0.46678416 0.85370558 0.71526952 0.37320812 0.95694515\n",
+      " 0.64772062 0.41864436 0.75564196 0.54783725]\n",
+      "R-array:  [0.96282155 0.4762581  1.11189438 1.13187253 0.88972254 1.31013902\n",
+      " 0.9004167  0.48350494 0.93447735 0.9716048 ]\n",
+      "T-array:  [0.14836242 1.37100269 0.87539052 0.68404699 0.43285669 0.81892932\n",
+      " 0.80287552 1.0468535  0.94181158 0.59903749]\n"
      ]
     }
    ],
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "metadata": {
     "id": "08dea567"
    },
@@ -637,10 +637,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.20123748 0.46527686 0.9328068  0.54605111 0.57636171 0.80708333\n",
-      " 0.67434063 0.37822369 0.33548858 0.3420608 ]\n",
-      "[0.20123748 0.46527686 0.         0.54605111 0.57636171 0.80708333\n",
-      " 0.67434063 0.37822369 0.33548858 0.3420608 ]\n"
+      "[0.123637   0.10784327 0.87858732 0.44028637 0.45523497 0.47737063\n",
+      " 0.25709718 0.91246028 0.50602161 0.09018425]\n",
+      "[0.123637   0.10784327 0.87858732 0.44028637 0.45523497 0.47737063\n",
+      " 0.25709718 0.         0.50602161 0.09018425]\n"
      ]
     }
    ],
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "metadata": {
     "id": "35ef784a"
    },
@@ -671,9 +671,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Array Z: [0.55860886 0.68506019 0.57435819 0.82749869 0.16998816 0.66150498\n",
-      " 0.34256078 0.04912908 0.53576409 0.88973158]\n",
-      "Nearest value to z=0.5 is 0.5357640867512935 at index 8 of Z.\n"
+      "Array Z: [0.06315309 0.26605395 0.80927917 0.08365633 0.18234556 0.47147443\n",
+      " 0.71896534 0.81096833 0.67888787 0.67940032]\n",
+      "Nearest value to z=0.5 is 0.4714744342942119 at index 5 of Z.\n"
      ]
     }
    ],
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "metadata": {
     "id": "096a1cd9",
     "outputId": "556cedca-dd8d-4c69-eec5-c551566608c7"
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 47,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -778,7 +778,7 @@
        "        [2., 2., 2.]]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 48,
    "metadata": {
     "id": "98c5d96f",
     "outputId": "a0e6aac1-d9ce-47a6-ec12-ba46a2103f7e"
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 49,
    "metadata": {
     "id": "eedca37e"
    },
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 50,
    "metadata": {
     "id": "0d405b5e"
    },
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "id": "b09a5a8a",
     "outputId": "74e7a05c-5dba-4c16-ff23-b84676c6aea2"
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -994,10 +994,10 @@
      "output_type": "stream",
      "text": [
       "The random array has following values\n",
-      "[0 3 1 1 3 8 7 8 1 0 2 9 6 7 0 6 9 7 6 6 9 0 7 6 3 9 4 6 3 3 1 7 3 1 0 2 0\n",
-      " 2 6 7 8 5 9 7 7 6 8 1 2 0]\n",
-      "The most frequently repeated value is - 6\n",
-      "The number of times the value repeats is - 8\n"
+      "[0 9 5 7 3 4 7 2 7 2 7 0 2 1 4 9 8 2 0 7 4 4 1 2 4 7 8 7 8 6 0 9 6 6 9 4 4\n",
+      " 6 0 6 5 9 0 8 3 0 8 1 8 2]\n",
+      "The most frequently repeated value is - 0\n",
+      "The number of times the value repeats is - 7\n"
      ]
     }
    ],
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "id": "6ffbda9a",
     "outputId": "08679722-d2e9-4e7e-81d0-6d2f039d6118"
